tests/cases/pass/bool_param_return.cs
class Program {
    static bool IsPositive(int x) { return x > 0; }
    static void Main() { Console.WriteLine(IsPositive(10)); }
}
