tests/cases/fail/return_type_mismatch.cs
class Program { static int Foo() { return "abc"; } static void Main() { Foo(); } }
